src/components/PokemonImage.css
.images-container {
    position: relative;
    flex-direction: column;
    display: flex;
    justify-content: center;
    align-items: center;
}

.mega-container {
    position: absolute;
    bottom: 7.5%;
    right: 10%;
    width: 18%;
    height: 18%;
    min-height: 10px;
    min-width: 10px;
}

.shadow-overlay {
    opacity: 1;
    position: absolute;
    bottom: 7.5%;
    left: 10%;
    width: 20%;
    height: 20%;
    min-height: 10px;
    min-width: 10px;
    z-index: 2;
}

.background-absolute-img {
    object-fit: contain;
    position: absolute;
    z-index: 0 !important;
    opacity: 25%;
}

.xl-overlay {
    opacity: 1;
    position: absolute;
    bottom: 7.5%;
    right: 10%;
    width: 18%;
    height: 18%;
}

.buddy-overlay {
    opacity: 1;
    position: absolute;
    top: 85%;
    right: 25%;
    width: 12%;
    height: 12%;
    z-index: 2;
}

